updated path to the profile picture

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td> <img src="C:\Users\LENOVO\Documents\WEB DEVELOPEMENT\HTML - personal site\profile picture.png" alt="Vettri chezhian profile picture" width="250" height="250"></td>
+      <td> <img src="C:https://github.com/Vettri-chezhian/HTML-CSS-basics-CV/blob/main/profile%20picture.png" alt="Vettri chezhian profile picture" width="250" height="250"></td>
       <td>
         <h1>Vettri chezhian P</h1>
         <p><em>Student at <strong><a href="https://panimalar.ac.in/">Panimalar engineering college</a></strong>.</em></p>
